# openmw-dev

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CHUNK_BOUNDARY_AUDIT.md  CHUNK_SUBDIVISION_SYSTEM.md  CLEANUP_SUMMARY.md  CMakeLists.txt  COMPREHENSIVE_AUDIT_REPORT.md  CURRENT_TEST_CONFIG.md  DEBUGGING_SESSION_SUMMARY.md  DEBUGGING_SNOW_DEFORMATION.md  DEPTH_CAMERA_FIX.md  DYNAMIC_OCEAN_IDEATION.md  DYNAMIC_OCEAN_IMPLEMENTATION_STATUS.md  FIXES_APPLIED_SUMMARY.md  IMPLEMENTATION_NOTES.md  Lake_System_Audit.md  MULTI_TERRAIN_DEFORMATION_DESIGN.md  NEXT_AGENT_PROMPT.md  NEXT_CHALLENGE.md  NEXT_SESSION_PROMPT.md  OCEAN_AUDIT_REPORT.md  OCEAN_BLACK_DEBUG_GUIDE.md  OCEAN_CONSOLE_BUILD_FIXES.md  OCEAN_CONSOLE_COMMANDS.md  OCEAN_CONSOLE_COMMANDS_SIMPLE.md  OCEAN_DOUBLE_OFFSET_FIX.md  OCEAN_FIXES_IMPLEMENTED.md  OCEAN_IMPLEMENTATION_TRACKING.md  OCEAN_LUA_BINDINGS.md  OCEAN_MASKING_TODO.md  OCEAN_OUTER_RING_FIX.md  OCEAN_PBR_SHADING_IMPLEMENTATION.md  OCEAN_RUNTIME_PARAMS_STATUS.md  OCEAN_VIBRATION_FIX.md  QUICK_TEST_GUIDE.md  RTT_CAMERA_COMPLETE_REWRITE.md  RTT_COORDINATE_ISSUE.md  RTT_DIAGNOSTIC_TESTS.md  RTT_FULL_AREA_BUG.md  (+37 more)
.claude/: settings.local.json  settings.local.json.bak
.claudiomiro/: INITIAL_PROMPT.md
CI/: before_script.android.sh  before_script.linux.sh  (+6 more)
apps/physicsobjecttool/: CMakeLists.txt  main.cpp
components/ocean/: CMakeLists.txt  oceanfftsimulation.cpp  oceanfftsimulation.hpp  watersubdivider.cpp  watersubdivider.hpp  watersubdivisiontracker.cpp  watersubdivisiontracker.hpp  watertype.hpp  watertypeclassifier.cpp  watertypeclassifier.hpp
(+349 files in other folders)
